<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_opcion1"
            android:icon="@drawable/ic_sol"
            android:title="@string/menu_opcion_1" />
        <item
            android:id="@+id/menu_proximos"
            android:icon="@drawable/ic_lluvia"
            android:title="@string/menu_opcion_3" />

        <item
            android:id="@+id/menu_desconectar"
            android:icon="@drawable/ic_descone"
            android:title="@string/menu_desconectar" />
        <item
            android:id="@+id/menu_salida"
            android:icon="@drawable/ic_exit_icon"
            android:title="@string/menu_salida" />
    </group>

</menu>
