<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:textColor="#ff131313"
    android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/icono"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:padding="25dp"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/dia"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#ff131313"
                    android:textSize="25dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dp_cielo"
                    android:paddingLeft="15dp"
                    android:textColor="#ff131313"
                    android:textSize="20dp" />
                <TextView
                    android:id="@+id/cielo"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#ff131313"
                    android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dp_viento"
                    android:paddingLeft="15dp"
                    android:textColor="#ff131313"
                    android:textSize="20dp" />
                <TextView
                    android:id="@+id/viento"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#ff131313"
                    android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/temp_max"
                    android:paddingLeft="15dp"
                    android:textColor="#ff131313"
                    android:textSize="20dp" />
                <TextView
                    android:id="@+id/tem_max"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#ff131313"
                    android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/temp_min"
                    android:paddingLeft="15dp"
                    android:textColor="#ff131313"
                    android:textSize="20dp" />
                <TextView
                    android:id="@+id/temp_min"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#ff131313"
                    android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/descripcion"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textColor="#ff131313"
                    android:layout_weight="1"
                    android:textSize="20dp" />
        </LinearLayout>
</LinearLayout>
